# macdbg

./: .gitignore  LICENSE  README.md  agent.sh  macdbg.sh  pyproject.toml  run.sh
.claude/skills/macdbg-agent/: SKILL.md
GUI/: README-GUI.md  build-native-deps.sh  build_app.sh  get-native-deps.sh  gui.py  launcher.c  main.py  run.sh  serve.py
GUI/macdbg.app/Contents/: Info.plist
GUI/macdbg.app/Contents/MacOS/: macdbg
GUI/server/: engine.py  httpd.py  snapshot.py  syntax.py
GUI/vendor313/bottle-0.13.4.dist-info/: RECORD
GUI/vendor313/proxy_tools-0.1.0.dist-info/: RECORD
GUI/vendor313/pyobjc_core-12.2.1.dist-info/: RECORD
GUI/vendor313/pyobjc_framework_cocoa-12.2.1.dist-info/: RECORD
GUI/vendor313/pyobjc_framework_quartz-12.2.1.dist-info/: RECORD
GUI/vendor313/pyobjc_framework_security-12.2.1.dist-info/: RECORD
GUI/vendor313/pyobjc_framework_uniformtypeidentifiers-12.2.1.dist-info/: RECORD
GUI/vendor313/pyobjc_framework_webkit-12.2.1.dist-info/: RECORD
GUI/web/: app.js  index.html  styles.css
lldb_wrapper/: __main__.py
lldb_wrapper/core/: debugger.py  events.py  memory.py  tracer.py
lldb_wrapper/ui/: app.py  context.py  palette.py  panes.py
macdbg/: __main__.py
macdbg.app/Contents/: Info.plist
macdbg.app/Contents/MacOS/: macdbg
macdbg/agent/: __main__.py  client.py  server.py  session.py
macdbg/core/: debugger.py  disasm.py  memory.py  registers.py  state.py  tracer.py
macdbg/native/: interpose.c  interpose.dylib
macdbg/ui/: app.py  context.py  panes.py  syntax.py
test/: Makefile  fakemal.c  hello.c  talker.c
(+427 files in other folders)
